--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
     <title>rupeek</title>
+    <link href=dist/static/css/app.3ca35e4a1871cd324308a3d541faca05.css rel=stylesheet>
   </head>
   <body>
     <div id="app"></div>
+    <script type=text/javascript src=dist/static/js/manifest.2ae2e69a05c33dfc65f8.js></script>
+    <script type=text/javascript src=dist/static/js/vendor.b3d88595552c902ee0ba.js></script>
+    <script type=text/javascript src=dist/static/js/app.e7b02b636ea1d205682c.js></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
