--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
     <title>rupeek</title>
-    <link href=dist/static/css/app.3ca35e4a1871cd324308a3d541faca05.css rel=stylesheet>
-  </head>
+    <link href=dist/static/css/app.43927171b2b52fc44387a15c061ed80e.css rel=stylesheet>  </head>
   <body>
     <div id="app"></div>
     <script type=text/javascript src=dist/static/js/manifest.2ae2e69a05c33dfc65f8.js></script>
