--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
     <title>rupeek</title>
-    <link href=dist/static/css/app.43927171b2b52fc44387a15c061ed80e.css rel=stylesheet>  </head>
-  <body>
+    <link href=dist/static/css/app.43927171b2b52fc44387a15c061ed80e.css rel=stylesheet>  <body>
     <div id="app"></div>
     <script type=text/javascript src=dist/static/js/manifest.2ae2e69a05c33dfc65f8.js></script>
     <script type=text/javascript src=dist/static/js/vendor.b3d88595552c902ee0ba.js></script>
-    <script type=text/javascript src=dist/static/js/app.1bf0428aab2be689e789.js></script>
-    <!-- built files will be auto injected -->
+    <script type=text/javascript src=dist/static/js/app.44dec99e848dc7829009.js></script>    <!-- built files will be auto injected -->
   </body>
 </html>
