--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
     <title>rupeek</title>
-    <link href=dist/static/css/app.43927171b2b52fc44387a15c061ed80e.css rel=stylesheet>
+    <link href=dist/static/css/app.17dbd3d451e50f9ce0e1d7b89b760dbc.css rel=stylesheet>
     <body>
     <div id="app"></div>
     <script type=text/javascript src=dist/static/js/manifest.2ae2e69a05c33dfc65f8.js></script>
     <script type=text/javascript src=dist/static/js/vendor.b3d88595552c902ee0ba.js></script>
-    <script type=text/javascript src=dist/static/js/app.335e627e6b7539438dca.js></script>  </body>
+    <script type=text/javascript src=dist/static/js/app.79caf6c8d97afc29ba46.js></script>
+    </body>
 </html>
